Fixed build for spring data to work with current spring boot